--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
   {% if DISPLAY_PAGES_ON_MENU %}
           {% for p in PAGES %}
             <li><a href="{{ SITEURL }}/archives.html">Archives</a></li>
-        		<li><a href="http://www.twitter.com/davidegallesi">Contact</a></li>
+        		<li><a href=#>Contact</a></li>
             <li{% if p == page %} class="active"{% endif %}><a href="{{ SITEURL }}/pages/{{ p.url }}">{{ p.title }}</a></li>
           
                 
