--- a/templates/article.html
+++ b/templates/article.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block content %}        
 <section id="content" class="body">    
-        <p id="published"{{ article.date.isoformat() }}"> {{ article.locale_date }} <br>—</p>
+        
         
         <header> <h2 class="entry-title"><a href="{{ pagename }}" rel="bookmark" title="Permalink to {{ article.title}}">{{ article.title }}</a></h2> </header>
         <footer class="post-info">
+        <p id="published"{{ article.date.isoformat() }}"> {{ article.locale_date }} </p>
                 
                                
         </footer><!-- /.post-info -->
